<?xml version="1.0"?>
<package>
  <name>t4ac_perception_msgs</name>
  <version>1.1.4</version>
  <description>Bird's Eye View tracked objects package</description>
  <maintainer email="carlos.gomezh@edu.uah.es">Carlos GH</maintainer>
  <license>BSD</license>
  <!-- <url type="website">https://github.com/leggedrobotics/darknet_ros</url> -->
  <author email="carlos.gomezh@edu.uah.es">Carlos GH</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
